# camera_localization

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  run-test-system.sh
.semaphore/: semaphore.yml
data/camera_calibration/ps3_640x480/2019-06-23_7x9_2.8mm/: readme.md
executables/: CMakeLists.txt  main.cpp
pattern_localization/: CMakeLists.txt  PatternMap.cpp  PatternMap.h
test-system/: .bash_custom  Dockerfile  color-codes.sh
